feat: migrate ios locators and update test suites